--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <p><em>Socionom</em></p>
                 <p>Arbetar som kurator på habiliteringen i ett utredningsteam för barn<br>
                 med misstänkt autism. Tidigare bland annat arbetat inom områdesbaserad <br>
-                socialtjäns och psykosocialt förändringsarbete med elever och deras familjer.</p></td>
+                socialtjänst och psykosocialt förändringsarbete med elever och deras familjer.</p></td>
          </tr>
     
     
